Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8427

[C++][Dataset] Do not ignore file paths with underscore/dot when full path was specified

    XMLWordPrintableJSON

Details

    Description

      Currently, when passing a list of file path to FileSystemDatasetFactory, the files that have one of their parent directories with a underscore or dot are skipped. Since the file paths were passed as an explicit list, we should maybe not skip them.

      For example, when specifying a directory (Selector), it will only check child directories to skip, not parent directories.

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              jorisvandenbossche Joris Van den Bossche
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m