ARROW-8427: [C++][Dataset] Only apply ignore_prefixes to selector results